invoke paper wallet

--- a/src/qt/res/html/paperwallet.html
+++ b/src/qt/res/html/paperwallet.html
@@ -55,7 +55,7 @@
 					<tr>
 						<td width="200">
 							<div style="display: inline-block;">
-								<img src=":/icons/che_cash_print" width="160" height="107">
+								<img src=":/icons/gostcoin" width="107" height="107">
 							</div>
 						</td>
 						<td>
