--- a/src/qt/res/html/paperwallet_en.html
+++ b/src/qt/res/html/paperwallet_en.html
@@ -17,7 +17,7 @@
 				</div>
 				<div>
 					<p>Use this address to deposit your Gostcoins. </p>
-					<p>The balance and transactoin history you can find in public blockchain: <a href=«http://explorer.gostco.in»>http://explorer.gostco.in</a></p> <br /><br /><br /><br />
+					<p>The balance and transactoin history you can find in public blockchain: <a href="http://explorer.gostco.in">http://explorer.gostco.in</a></p> <br /><br /><br /><br />
 
 				</div>
 			</td>
