--- a/src/qt/res/html/paperwallet_ru.html
+++ b/src/qt/res/html/paperwallet_ru.html
@@ -17,7 +17,7 @@
 				</div>
 				<div>
 					<p>Используйте данный адрес для зачисления ГОСТКоинов. </p>
-					<p>Баланс и историю по данному адресу вы можете посмотреть в реестре сети: <a href=«http://explorer.gostco.in»>http://explorer.gostco.in</a></p> <br /><br /><br /><br />
+					<p>Баланс и историю по данному адресу вы можете посмотреть в реестре сети: <a href="http://explorer.gostco.in">http://explorer.gostco.in</a></p> <br /><br /><br /><br />
 
 				</div>
 			</td>
